[NTP] Refresh the Most Visited tiles when the tile source changes

The "Restore default shortcuts" menu option is not updated unless an
onMostVisitedChanged event is sent. This only occurs when a URL/title
of the new tile set is different from the current tiles. As such (after
adding then removing a link), the restore default option will not be
disabled after clicking since the tiles are considered unchanged.

Now consider tiles with different sources to be unequal.
Screencast: https://screencast.googleplex.com/cast/NTQ0MDY0MTk2MjA4MjMwNHw0MTY5NmRmYi1mNg

Bug: 896566
Change-Id: I8c1474d2a567889fc5296c3a58228a92c3a67b71
Reviewed-on: https://chromium-review.googlesource.com/c/1292149
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601619}
Former-commit-id: db8138f8711c4eb1ead267727e380ae75671fb1d